stream fixes for pages
